shared_library(
    'cxbhook',
    name_prefix : '',
    include_directories : inc,
    implicit_include_directories : false,
    vs_module_defs : 'cxbhook.def',
    c_pch : '../precompiled.h',
    dependencies : [
        capnhook.get_variable('hook_dep'),
        capnhook.get_variable('hooklib_dep'),
    ],
    link_with : [
        aimeio_lib,
        amex_lib,
        board_lib,
        cxbio_lib,
        gfxhook_lib,
        hooklib_lib,
        jvs_lib,
        platform_lib,
        util_lib,
    ],
    sources : [
        'cxb-dll.c',
        'cxb-dll.h',
        'config.c',
        'config.h',
        'dllmain.c',
        'revio.c',
        'revio.h',
        'led.c',
        'led.h',
        'network.c',
        'network.h',
    ],
)
